# esmfold

./: .gitignore  Dockerfile  README.md  esmfold.py  pyproject.toml
.devcontainer/: devcontainer.json
src/esmfold/: cli.py
